build: 更新需求文档索引脚本
- 删除了 optimization_requirements_20241201.md 文件
- 删除了 README.md 文件
- 删除了 remote_library_requirements_20241201.md 文件
- 更新了 DocumentationStyleTest.vue 和 SimpleEventTest.vue 文件